--- a/tech-website/style/style.css
+++ b/tech-website/style/style.css
@@ -505,52 +505,72 @@ h3 {
 
 footer {
   color: white;
-  padding: 20px;
+  padding: 2px 30px 32px 2px;
   height: 100%;
-  background: linear-gradient(to left, #01123b, #04002f);
+  background: linear-gradient(to left, #00051e, #170034);
 }
-footer h2 {
-  margin-top: 10px;
-  font-size: 1.5rem;
-}
-footer p {
-  padding-top: 20px;
-  text-align: center;
-}
-
-.footer-column {
+footer .footer-div {
   justify-content: center;
   align-items: center;
   display: flex;
-  flex-direction: row;
-  gap: 180px;
+  flex-direction: column;
+  gap: 50px;
 }
-
-table {
+footer .footer-div table {
   color: white;
   margin: 12px 12px 12px 12px;
   padding: 2px 2px 2px 2px;
   border-collapse: collapse;
 }
-table tr {
+footer .footer-div table tr {
   text-align: center;
   margin-left: 30px;
 }
-table td {
+footer .footer-div table td {
   font-size: 0.9rem;
   margin-top: 30px;
   margin-left: 20px;
 }
-table td a {
+footer .footer-div table td a {
   text-decoration: none;
 }
-table td a:hover {
+footer .footer-div table td a:hover {
   transition: 0.2s;
   cursor: pointer;
   text-decoration: underline;
 }
+footer .footer-div h2 {
+  margin-top: 10px;
+  font-size: 1.5rem;
+}
+footer .footer-div .address-div {
+  display: flex;
+  flex-direction: row;
+}
+footer .footer-div .address-div address {
+  margin-top: -30px;
+}
+footer .footer-div p {
+  text-align: center;
+  font-size: 0.7rem;
+  padding-top: 20px;
+}
 
 @media screen and (max-width: 704px) {
+  nav, .plans-container, .features-container, .feedback-container, .footer-div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 30px;
+  }
+
+  .nav-bar-button, .top-button {
+    padding: 5px 10px 4px 10px;
+    font-size: 1.1rem;
+    z-index: 1;
+  }
+
   .top-button, .nav-bar-button {
     position: fixed;
   }
@@ -563,16 +583,8 @@ table td a:hover {
     left: 2%;
   }
 
-  nav, .plans-container, .features-container, .feedback-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 30px;
-  }
-
   body {
-    overflow-x: hidden;
+    overflow-x: scroll;
   }
 
   .header {
@@ -604,16 +616,16 @@ table td a:hover {
   }
 
   .service-section {
-    height: 25vh;
+    height: 23vh;
     gap: 20px;
   }
   .service-section .service-section-box {
-    width: 7rem;
-    height: 7rem;
+    width: 6.5rem;
+    height: 6.5rem;
     padding: 2px 5px 2px 2px;
   }
   .service-section .service-section-box ion-icon {
-    margin-left: 35px;
+    margin-left: 30px;
     font-size: 3rem;
   }
   .service-section .service-section-box p {
@@ -661,78 +673,98 @@ table td a:hover {
   }
   .features-container .features-div p {
     margin-left: -60px;
-    font-size: 1.7rem;
+    font-size: 1.4rem;
   }
   .features-container .features-div span {
     margin-top: -60px;
     font-size: 0.9rem;
   }
 
-  .accessibility-div img {
-    width: 2rem;
+  .accessibility-section {
+    padding: 2px 20px 2px 20px;
+  }
+  .accessibility-section .accessibility-div img {
+    width: 15rem;
     height: auto;
   }
-  .accessibility-div p {
-    font-size: 0.6rem;
+  .accessibility-section .accessibility-div p {
+    margin-left: -2px;
+    font-size: 0.85rem;
+  }
+  .accessibility-section .accessibility-icon-text-div-container {
+    gap: 0px;
+  }
+  .accessibility-section .accessibility-icon-text-div-container .accessibility-icon-text-div ion-icon {
+    font-size: 2.3rem;
+  }
+  .accessibility-section .accessibility-icon-text-div-container .accessibility-icon-text-div p {
+    text-align: center;
+    margin-left: -1px;
+    font-size: 0.85rem;
   }
 
-  .accessibility-icon-text-div-container .accessibility-icon-text-div ion-icon {
-    font-size: 3rem;
+  .feedback-section {
+    height: 100%;
+    clip-path: none;
   }
-  .accessibility-icon-text-div-container .accessibility-icon-text-div p {
-    font-size: 0.9rem;
+  .feedback-section .feedback-div {
+    height: 18rem;
   }
-}
-.feedback-section {
-  height: 100%;
-  padding-bottom: 30px;
-}
-.feedback-section .feedback-div {
-  height: 18rem;
-}
-.feedback-section .feedback-div img {
-  width: 4.2rem;
-  height: auto;
-}
-.feedback-section .feedback-div p {
-  margin-top: 2px;
-  line-height: 30px;
-  font-size: 0.95rem;
-}
-.feedback-section .feedback-div .icons-container {
-  margin-top: 10px;
-}
-.feedback-section .feedback-div .feedback-name-div {
-  margin-top: -1px;
-}
-.feedback-section .footer-column {
-  justify-content: center;
-  align-items: center;
-  display: flex;
-  flex-direction: row;
-  gap: 10px;
-}
-.feedback-section .footer-section table {
-  color: white;
-  padding: 2px 2px 2px 2px;
-  border-collapse: collapse;
-}
-.feedback-section .footer-section table tr {
-  text-align: center;
-  margin-left: 30px;
-}
-.feedback-section .footer-section table td {
-  font-size: 0.7rem;
-  margin-top: 30px;
-  margin-left: 20px;
-}
-.feedback-section .footer-section table td a {
-  text-decoration: none;
-}
-.feedback-section .footer-section table td a:hover {
-  transition: 0.2s;
-  cursor: pointer;
-  text-decoration: underline;
+  .feedback-section .feedback-div img {
+    width: 4.2rem;
+    height: auto;
+  }
+  .feedback-section .feedback-div p {
+    margin: -2px 0px 0px 22px;
+    line-height: 30px;
+    font-size: 0.95rem;
+  }
+  .feedback-section .feedback-div .icons-container {
+    margin-top: 10px;
+  }
+  .feedback-section .feedback-div .feedback-name-div {
+    margin-top: -1px;
+  }
+
+  footer .footer-div {
+    gap: 10px;
+    padding: 2px 12px 2px 22px;
+  }
+  footer table {
+    color: white;
+    padding: 2px 2px 2px 2px;
+    border-collapse: collapse;
+  }
+  footer table tr {
+    text-align: center;
+    margin-left: 30px;
+  }
+  footer table td {
+    font-size: 0.7rem;
+    margin-top: 30px;
+    margin-left: 20px;
+  }
+  footer table td a {
+    text-decoration: none;
+  }
+  footer table td a:hover {
+    transition: 0.2s;
+    cursor: pointer;
+    text-decoration: underline;
+  }
+
+  .address-div {
+    margin-top: 40px;
+  }
+  .address-div address {
+    font-size: 0.8rem;
+  }
+
+  p {
+    margin-left: 20px;
+    text-align: center;
+    font-size: 0.8rem;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
