--- a/tech-website/style/features.scss
+++ b/tech-website/style/features.scss
@@ -24,6 +24,7 @@
   background-size:cover;
   background-attachment: fixed;
   height:94vh;
+  width: 100%;
   .line{
     background: $whiteColor;
   }
