--- a/tech-website/style/footer.scss
+++ b/tech-website/style/footer.scss
@@ -1,44 +1,46 @@
 @import "variables";
 
-@mixin flex($direction){
+@mixin flex($direction) {
   display: flex;
-  flex-direction:$direction;
+  flex-direction: $direction;
 }
 
-@mixin centerAligned{
+@mixin centerAligned {
   justify-content: center;
-  align-items: center ;
+  align-items: center;
 }
 
-footer{
-  color:$whiteColor;
-  padding:2px 30px 32px 2px;
-  height: 100%;
+footer {
+
+  padding: 2px 30px 32px 2px;
+  color: $whiteColor;
   background: linear-gradient(to left, #00051e, #170034);
 
-  .footer-div{
+  .footer-div {
     @include centerAligned;
     @include flex(column);
-    gap:50px;
+    gap: 50px;
 
-    table{
-      color:$whiteColor;
+    table {
+      color: $whiteColor;
       margin: 12px 12px 12px 12px;
-      padding:2px 2px 2px 2px;
+      padding: 2px 2px 2px 2px;
       border-collapse: collapse;
 
-      tr{
-        text-align:$textAlignCenter;
+      tr {
+        text-align: $textAlignCenter;
         margin-left: 30px;
       }
 
-      td{
+      td {
         font-size: .9rem;
         margin-top: 30px;
         margin-left: 20px;
-        a{
+
+        a {
           text-decoration: $noTextUnderline;
-          &:hover{
+
+          &:hover {
             transition: .2s;
             cursor: $cursorButton;
             text-decoration: underline;
@@ -47,21 +49,28 @@ footer{
       }
     }
 
-  h2{
-  margin-top: 10px;
-  font-size: 1.5rem;
-}
-    .address-div{
-      @include flex(row);
-  address{
-    margin-top: -30px;
-  }
+    h2 {
+      margin-top: 10px;
+      font-size: 1.5rem;
     }
-  p{
 
-    text-align: $textAlignCenter;
-    font-size: .7rem;
-    padding-top: 20px;
-   }
-}
+    .address-div {
+      @include flex(row);
+
+      address {
+        margin-top: -30px;
+      }
+      iframe{
+        border-radius: 20px;
+        margin-left: 30px;
+      }
+    }
+
+    p {
+
+      text-align: $textAlignCenter;
+      font-size: .7rem;
+      padding-top: 20px;
+    }
+  }
 }
