--- a/tech-website/style/feedback.scss
+++ b/tech-website/style/feedback.scss
@@ -12,7 +12,7 @@
 
 .headings-container,.accessibility-div,.accessibility-icon-text-div{
   @include flex(column);
-  @include justifyContent;
+  @include centerAligned;
   gap:0px;
 }
 
@@ -22,6 +22,7 @@
   background-size:cover;
   background-attachment: fixed;
   height:73vh;
+  width: 100%;
   clip-path: polygon(0% 0%,0% 100%,100% 100%,88% 0%);
 }
 
