updating contact us section

--- a/tech-website/style/body.scss
+++ b/tech-website/style/body.scss
@@ -5,6 +5,11 @@
   flex-direction: $direction;
 }
 
+@mixin justifyContent{
+  justify-content: center;
+  align-items: center;
+}
+
 .create-account, .top-button, .nav-bar-button, .show-nav-bar, .contact-us-box {
   position: fixed;
 }
@@ -101,6 +106,7 @@ body::-webkit-scrollbar-thumb {
   width: 100%;
   height: 50rem;
   z-index: +1;
+  z-index: +1;
   background: linear-gradient(to left, #001738, #170026);
   animation: showNavBar .3s ease-in-out;
 
@@ -180,32 +186,37 @@ body::-webkit-scrollbar-thumb {
 
 @keyframes contactUsPage {
   0% {
+    transform: scale(.5);
     opacity: 0;
   }
   100% {
 
+    transform: scale(1);
     opacity: 1;
   }
 }
 
 
 .contact-us-box {
-  width: 40%;
-  left: 30%;
+  position: fixed;
+  width: 75%;
+  left: 0%;
 }
 
   .contact-us-div {
     @include flexDirection(row);
-    visibility: hidden;
-    padding: 22px 2px 12px 22px;
-    gap: 50px;
+    position: absolute;
+    top:100%;
+    padding: 42px 2px 2px 22px;
+    gap: 200px;
     font-size: .9rem;
 
     form {
       @include flexDirection(column);
-      gap: 30px;
+      @include justifyContent;
+      gap: 10px;
       input{
-
+        margin-top: -20px;
       }
       textarea{
         margin-top: 30px;
@@ -234,7 +245,8 @@ body::-webkit-scrollbar-thumb {
   .remove-contact-us-icon{
     border-top-right-radius: 20px;
     border-bottom-right-radius: 20px;
-    margin-left: -27px;
+    margin-left: 53px;
+    margin-top: -45px;
     &:hover{
       color:black;
     }
