--- a/tech-website/style/variables.scss
+++ b/tech-website/style/variables.scss
@@ -12,3 +12,4 @@ $serviceSectionHeading:white;
 $justifyContent:center;
 $serviceBoxColor: linear-gradient(to left, #110148, #270056);
 $blackColor:black;
+$noInputOutline:none;
