--- a/tech-website/style/style-responsive.scss
+++ b/tech-website/style/style-responsive.scss
@@ -1,6 +1,6 @@
 @import "variables";
 
-@mixin flex($direction) {
+@mixin flexDirection($direction) {
   display: flex;
   flex-direction: $direction;
 }
@@ -23,7 +23,7 @@
   }
 
   nav, .plans-container, .features-container, .feedback-container,.footer-div {
-    @include flex(column);
+    @include flexDirection(column);
     @include centerAligned;
     gap: 30px;
   }
@@ -66,7 +66,7 @@
   }
 
   .header-content {
-    @include flex(column);
+    @include flexDirection(column);
     @include centerAligned;
 
     h1 {
@@ -75,9 +75,76 @@
     }
   }
 
+
   .header-img-div {
     img {
       visibility: hidden;
+    }
+  }
+
+  .contact-us-box{
+    width: 100%;
+    height: 120rem;
+    top:0%;
+    padding:2px 32px 2px 32px;
+    border-top-left-radius: 0px;
+    border-bottom-left-radius: 0px;
+  }
+
+  .contact-us-div {
+    margin-left: -60px;
+    @include flexDirection(column);
+    @include centerAligned;
+    position: absolute;
+    top: 100%;
+    padding: 42px 2px 2px 22px;
+    gap: 40px;
+    font-size: .9rem;
+    .contact-us-heading-div{
+      margin-top: -30px;
+    }
+    form{
+      margin:30px 0px 0px 35px;
+
+      input{
+        width: 90%;
+      }
+      textarea{
+        width: 90%;
+      }
+      button{
+        margin-left: -20px;
+      }
+    }
+    .contact-us-column-container{
+      @include centerAligned;
+      .contact-us-column{
+        @include flexDirection(row);
+        @include centerAligned;
+        flex-wrap: wrap;
+        ion-icon{
+          font-size: 1.5rem;
+        }
+        p{
+          white-space: pre;
+          font-size: .75rem;
+        }
+      }
+    }
+
+  }
+
+
+  .remove-contact-us-icon{
+    font-size: 1.5rem;
+    border-top-right-radius: 0px;
+    border-bottom-right-radius: 0px;
+    width: 114%;
+    height: 3vh;
+    margin:10px 0px 0px 10px;
+    padding:20px 0px 46px 0px ;
+    &:hover{
+      color:black;
     }
   }
 
